fix(global): various fixes (#83)
* fix(article): active state for links

* fix(carousel): add hover/focus states on arrows)

* fix(fab): background of carousel is covering up fab

--- a/src/assets/styles/includes/typography.css
+++ b/src/assets/styles/includes/typography.css
@@ -243,6 +243,11 @@
   :global(.wrapper_isChinese) & {
     font-family: var(--font-sans-serif-regular-cn);
   }
+
+  &:focus {
+    color: var(--color-text-light);
+    outline: none;
+  }
 }
 
 @define-mixin type-language {
